cabal-version:   3.4
name:            tour-de-haskell
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          unorsk
maintainer:      25188+unorsk@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Linear
    MyLib

  default-extensions: UnicodeSyntax
  build-depends:      base ^>=4.18.0.0
  hs-source-dirs:     src
  default-language:   GHC2021

executable tour-de-haskell
  import:             warnings
  main-is:            Main.hs
  default-extensions: UnicodeSyntax
  build-depends:
    , base             ^>=4.18.0.0
    , tour-de-haskell

  hs-source-dirs:     app
  default-language:   GHC2021

test-suite tour-de-haskell-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base             ^>=4.18.0.0
    , tour-de-haskell
